# zephyr-pinetime-demo

./: README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  semihosting.conf
app/src/: main.c
